force-app/main/default/objects/BLN_VehicleType__c/BLN_VehicleType__c.object-meta.xml
<CustomObject>
    <description>FOUK-1176 This object is used to store vehicle type information.</description>
    <label>Vehicle Type</label>
    <nameField>
        <displayFormat>VT-{00000000}</displayFormat>
        <label>Vehicle Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>