force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_AvailableEndDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_AvailableEndDate__c</fullName>
    <description>FOUK-1176 This field is used to store available end date for vehicle type.</description>
    <label>Available End Date</label>
    <type>DateTime</type>
</CustomField>