force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_AvailableStartDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_AvailableStartDate__c</fullName>
    <description>FOUK-1176 This field is used to store available start date for vehicle type.</description>
    <label>Available Start Date</label>
    <type>DateTime</type>
</CustomField>