force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_BodyType__c.field-meta.xml
<CustomField>
    <fullName>BLN_BodyType__c</fullName>
    <description>FOUK-1176 This field is used to store body type of the vehicle type</description>
    <label>Body Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>