force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_Colour__c.field-meta.xml
<CustomField>
    <fullName>BLN_Colour__c</fullName>
    <description>FOUK- This field is used to store colour for vehicle type.</description>
    <label>Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>