force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_IsVehicleCalibrationRequired__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsVehicleCalibrationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-1176 This field is used to store vehicle calibration req or not for vehicle type.</description>
    <label>Is Vehicle Calibration Required</label>
    <type>Checkbox</type>
</CustomField>