force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyCreatedDate__c</fullName>
    <description>R2DM-182 : Field for DM team</description>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>