force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_Make__c.field-meta.xml
<CustomField>
    <fullName>BLN_Make__c</fullName>
    <description>FOUK-1167 This field is used to store make of the vehicle type.</description>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>