force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_MDMExternalID__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMExternalID__c</fullName>
    <description>FOUK-1176 This field is used to store mdm external id for vehicle type.</description>
    <label>MDM External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>