force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_MigratedData__c.field-meta.xml
<CustomField>
    <fullName>BLN_MigratedData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK:8096 - This field is created to store the status of Migrated Data</description>
    <label>Migrated Data</label>
    <type>Checkbox</type>
</CustomField>