force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_Model__c.field-meta.xml
<CustomField>
    <fullName>BLN_Model__c</fullName>
    <description>FOUK-1176 This field is used to store model of the vehicle type.</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>