force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_MVRIS__c.field-meta.xml
<CustomField>
    <fullName>BLN_MVRIS__c</fullName>
    <description>FOUK-1176 This field is used to store MVRIS of the vehicle type.</description>
    <label>MVRIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>