force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_UniqueId__c.field-meta.xml
<CustomField>
    <fullName>BLN_UniqueId__c</fullName>
    <description>FOUK-3149</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is a combination of MVRIS and MDM Id</inlineHelpText>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>