force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_VehicleDescription__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleDescription__c</fullName>
    <description>FOUK-1176 This field is used to store vehicle description.</description>
    <label>Vehicle Description</label>
    <type>TextArea</type>
</CustomField>