force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_VehicleNote__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleNote__c</fullName>
    <description>Create Under CR 10275</description>
    <label>Vehicle Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>