force-app/main/default/objects/BLN_VehicleType__c/fields/BLN_Year__c.field-meta.xml
<CustomField>
    <fullName>BLN_Year__c</fullName>
    <description>FOUK-1176 This field is used to store year the vehicle type was registered.</description>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>