force-app/main/default/objects/BLN_VehicleType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BLN_UniqueId__c</columns>
    <columns>BLN_MVRIS__c</columns>
    <columns>BLN_MDMExternalID__c</columns>
    <columns>BLN_BodyType__c</columns>
    <columns>BLN_Colour__c</columns>
    <columns>BLN_IsVehicleCalibrationRequired__c</columns>
    <columns>BLN_Make__c</columns>
    <columns>BLN_MigratedData__c</columns>
    <columns>BLN_Model__c</columns>
    <columns>BLN_SpecialVehicle__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>